--- a/Code/day_2/Day2_Simple_Linear_Regression.ipynb
+++ b/Code/day_2/Day2_Simple_Linear_Regression.ipynb
@@ -57,7 +57,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "dataset = pd.read_csv(\"D:\\Py_Workspace\\Learn_ML_in_100_days\\datasets\\studentscores.csv\")\n",
-    "X = dataset.iloc[ :, : 1].values\n",
+    "X = dataset.iloc[ :, : 1].values  # iloc按行号索引,loc按index索引\n",
     "y = dataset.iloc[ :, 1].values\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=1/4, random_state=0)\n",
@@ -146,7 +146,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x120537027b8>]"
+       "[<matplotlib.lines.Line2D at 0x1bb6477f470>]"
       ]
      },
      "execution_count": 4,
@@ -184,7 +184,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x12053c2d128>]"
+       "[<matplotlib.lines.Line2D at 0x1bb60cbd518>]"
       ]
      },
      "execution_count": 5,
