--- a/Code/day_4_5_6/Day4_LogisticRegression.ipynb
+++ b/Code/day_4_5_6/Day4_LogisticRegression.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "<p align=\"center\">\n",
-    "  <img src=\"https://github.com/QiujieDong/Learn_ML_in_100_days/blob/master/Other%20Docs/data.PNG\">\n",
+    "  <img src=\"https://github.com/QiujieDong/Learn_ML_in_100_days/blob/master/Other%20Docs/data.PNG?raw=true">\n",
     "</p> \n"
    ]
   },
